# Projet-Sae

./: Recueil de besoin part2.docx  SAE202 (1).ipynb  SAE_Santa clauss .ipynb  habib ben mansour representation sae bdd.docx  sae recueil et besoin info (1).docx
mongodb_archiver/: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  INDEX.md  MONITORING.md  POWERSHELL_SCRIPTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  README_SIMULATION.md  SETUP_MONGODB.md  TROUBLESHOOTING_PYTHON.md  __init__.py  archiver.py  config.py  demo.py  generator.py  lance_tout.py  logger.py  main.py  pyproject.toml  report_quarto_project.ipynb  requirements.txt  simulate.py  test_archiver.py  test_config.py  test_flow_auto.py  watcher.py
mongodb_archiver/clients/: client_sim.py  client_sim_changestreams.py  make_test_order.py
mongodb_archiver/livreurs/: livreur_sim.py
mongodb_archiver/plateforme/: assign_delivery_manual.py  platform_sim.py  platform_sim_changestreams.py
mongodb_archiver/report/: cover.tex
mongodb_archiver/restaurants/: restaurant_sim.py
mongodb_archiver/sim_flow/: COMPARISON.md  FLOW_DIAGRAM.md  LAUNCHER_GUIDE.md  PRESENTATION_AMELIOREE.md  QUICKSTART.md  README.md  README_CHANGESTREAMS.md  README_VERIFICATION.md  START_HERE.md  force_accept_delivery.py  launch_all.bat  launch_all.ps1  launcher.py  launcher_advanced.py  launcher_changestreams.py  livreur_sim_changestreams.py  platform_sim.py  platform_sim_changestreams.py  restaurant_sim.py  restaurant_sim_changestreams.py  show_order_status.py  test_changestreams.py  test_support_changestreams.py  verify_system.py
mongodb_archiver/tools/: README_SHOW_HISTORY.md  check_livreurs.py  inspect_metrics.py  measure_assignment_delay.py  plot_fake_latency.py  plot_latency_mongo.py  seed_fake_metrics.py  (+2 more)
(+155 files in other folders)
